Login, Register ve Ana Sayfa eklendi

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -6,6 +6,6 @@
     <title>İlk MVC Sayfam</title>
 </head>
 <body>
-    <p th:text="${title}"></p>
+    <p th:text="${model.pagename}"></p>
 </body>
 </html>
